--- a/index.html
+++ b/index.html
@@ -7,6 +7,33 @@
   <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
-  This is the blog for food.
+<!-- Navigation -->
+ <nav>
+  <!-- Header -->
+   <header>
+    <div class="main">
+      <div class="menu_icon">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="M3 18v-2h18v2zm0-5v-2h18v2zm0-5V6h18v2z"/></svg>
+      </div>
+      <div class="nav_items">
+        <a  class="active" href="#">Home</a>
+        <a href="#">Recipies</a>
+        <a href="#">Dinner</a>
+        <a href="#">Desserts</a>
+        <a href="#">Pages</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+
+      </div>
+      <div class="search_icon">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="m19.6 21l-6.3-6.3q-.75.6-1.725.95T9.5 16q-2.725 0-4.612-1.888T3 9.5t1.888-4.612T9.5 3t4.613 1.888T16 9.5q0 1.1-.35 2.075T14.7 13.3l6.3 6.3zM9.5 14q1.875 0 3.188-1.312T14 9.5t-1.312-3.187T9.5 5T6.313 6.313T5 9.5t1.313 3.188T9.5 14"/></svg>
+      </div>
+    </div>
+   </header>
+   <!-- Subheader -->
+    <div>
+      Subheader
+    </div>
+ </nav>
 </body>
 </html>
